# custom_yolov8_processing

./: CMakeLists.txt  README.md
include/: constants.hpp  detection.hpp  draw.hpp  postproc.hpp  utils.hpp
src/: constants.cpp  detection.cpp  draw.cpp  postproc.cpp  utils.cpp  yolov8_gst_host_app.cpp
